added deounce for input validator

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
           <ul id="display-num-set">
             <span>你的彩票号码</span>
           </ul>
+          <!-- divider -->
+          <hr />
           <ul id="display-bonus-set">
             <span>你的彩票Bonus号码</span>
           </ul>
